--- a/core/res/res/values/fortune_config.xml
+++ b/core/res/res/values/fortune_config.xml
@@ -18,4 +18,7 @@
     <string-array name="config_forceEnabledComponents" translatable="false">
     </string-array>
 
+    <!-- Whether device has an alert slider. -->
+    <bool name="config_hasAlertSlider">false</bool>
+
 </resources>
