--- a/core/res/res/values/fortune_symbols.xml
+++ b/core/res/res/values/fortune_symbols.xml
@@ -29,4 +29,9 @@
          the sensor embedded in the power key and listening all the time
          causes a poor experience. -->
     <java-symbol type="bool" name="config_fingerprintWakeAndUnlock" />
+
+    <!-- DC Dimming -->
+    <java-symbol type="string" name="config_deviceDcDimmingSysfsNode" />
+    <java-symbol type="string" name="config_deviceDcDimmingEnableValue" />
+    <java-symbol type="string" name="config_deviceDcDimmingDisableValue" />
 </resources>
